objects/SalesOrderLine__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancel__c</fullName>
        <label>取消</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <label>値引額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Effective__c</fullName>
        <label>有効</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>text( ProductItem__r.Apply__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本体区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <formula>mid( ProductNumber__c ,3,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>製番3桁目</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <description>ME販促資料作成用項目</description>
        <label>ライン状況</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstallDateFormula__c</fullName>
        <formula>Datevalue(InstallDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>搬入日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InstallDate__c</fullName>
        <label>搬入日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InstallUpdateDateFormula__c</fullName>
        <formula>Datevalue(InstallUpdateDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>搬入日(更新)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InstallUpdateDate__c</fullName>
        <label>搬入日(更新)（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NyukaYoteDateFormula__c</fullName>
        <formula>Datevalue(NyukaYoteDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>入荷予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NyukaYoteDate__c</fullName>
        <label>入荷予定日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrderDateFormula__c</fullName>
        <formula>Datevalue(OrderDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>オーダ日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <label>オーダ日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrderDetailsMemo__c</fullName>
        <label>受注明細メモ</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderQuantity__c</fullName>
        <label>オーダ数量</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderUnit__c</fullName>
        <label>オーダ単位</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanDeliverryTimeFormula__c</fullName>
        <formula>Datevalue(PlanDeliverryTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計画納期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlanDeliverryTime__c</fullName>
        <label>計画納期（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PlanWarehousingDateFormula__c</fullName>
        <formula>Datevalue(PlanWarehousingDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計画入庫日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlanWarehousingDate__c</fullName>
        <label>計画入庫日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PositionText__c</fullName>
        <formula>TEXT( Position__c )</formula>
        <label>位置</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>位置</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>価格</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>品目</label>
        <referenceTo>ProductItem__c</referenceTo>
        <relationshipLabel>販売オーダライン</relationshipLabel>
        <relationshipName>SalesOrderLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>商品名</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <label>製番</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesDateFormula__c</fullName>
        <formula>Datevalue(SalesDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>売上日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesDate__c</fullName>
        <label>売上日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SalesDivision__c</fullName>
        <label>売上区分</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrderLineNo_Sync__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>販売オーダラインNo_連携用</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SalesOrderLink__c</fullName>
        <label>販売オーダ</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipLabel>販売オーダライン</relationshipLabel>
        <relationshipName>SalesOrderLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SalesOrder_Formula__c</fullName>
        <formula>LEFT(SalesOrderLineNo_Sync__c, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>販売オーダ_数式</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesProcessingDateFormula__c</fullName>
        <formula>Datevalue(SalesProcessingDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>売上処理日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesProcessingDate__c</fullName>
        <description>保守の納期を格納する項目</description>
        <label>売上処理日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <description>保守の請求番号を格納する項目</description>
        <label>売上</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <label>連番</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShukaSuryo__c</fullName>
        <label>出荷数量 (棚卸単位)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShukkaDateFormula__c</fullName>
        <formula>Datevalue(ShukkaDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出荷日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShukkaDate__c</fullName>
        <description>whinh430.cdat（確認日付）</description>
        <label>出荷日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShukkaStatusCode__c</fullName>
        <label>出荷状況コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShukkaStatus__c</fullName>
        <label>出荷状況</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Soko__c</fullName>
        <label>倉庫</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxCode__c</fullName>
        <label>税金コード</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxName__c</fullName>
        <label>税金コード名</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UketsukeTantosha__c</fullName>
        <label>受付担当者</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZConstructinNo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Z工事№</label>
        <referenceTo>SpecialConstructionQuoteAnswer__c</referenceTo>
        <relationshipLabel>販売オーダライン</relationshipLabel>
        <relationshipName>SalesOrderLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZaikoKanriKubun__c</fullName>
        <formula>ProductItem__r.ZaikoKanriKubun__c</formula>
        <label>在庫管理区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zegaku__c</fullName>
        <formula>Amount__c * Zeritsu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>税額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zeritsu__c</fullName>
        <label>税率</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <label>販売オーダライン</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ZConstructinNo__c</columns>
        <columns>OrderQuantity__c</columns>
        <columns>Amount__c</columns>
        <columns>ProductName__c</columns>
        <columns>ProductNumber__c</columns>
        <columns>DiscountAmount__c</columns>
        <columns>ProductItem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductName__c</field>
            <operation>contains</operation>
            <value>クライアント</value>
        </filters>
        <label>３３L</label>
    </listViews>
    <listViews>
        <fullName>View</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>View2</fullName>
        <columns>NAME</columns>
        <columns>PositionText__c</columns>
        <columns>SerialNumber__c</columns>
        <columns>ProductNumber__c</columns>
        <columns>ProductName__c</columns>
        <columns>OrderQuantity__c</columns>
        <columns>OrderUnit__c</columns>
        <columns>PlanDeliverryTimeFormula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SalesOrderLink__c</field>
            <operation>equals</operation>
            <value>EM11j0267</value>
        </filters>
        <label>左治木さん</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>販売オーダ</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>